--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>PRUEBA</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus doloremque, tenetur, recusandae saepe vero laboriosam beatae a dolore veritatis excepturi amet, temporibus dolor perferendis nam harum illum labore ducimus. Vero recusandae, quibusdam porro libero qui nulla vel veniam ullam adipisci voluptatem quod maxime vitae, necessitatibus est aliquam voluptatum! Debitis similique, aperiam nostrum deleniti repellendus mollitia voluptate voluptatibus et sit ipsa. Pariatur laboriosam beatae consequatur, culpa nostrum minima earum quae harum voluptatibus reiciendis labore similique perferendis minus provident, quasi necessitatibus repudiandae. Aliquid, explicabo! Ipsam quasi maxime hic dolore illo id minima laborum ad quo, quia provident error quisquam consequatur fuga esse.</p>
+    <footer>
+        <h3>Ejercicio</h3>
+    </footer>
     
 </body>
 </html>
